# DineSync

./: .gitignore  HACKATHON_SUBMISSION.md  LICENSE  README.md  VIDEO_HACKATHON_SCRIPT.md  demo_interactive.py  dinesync_app.py  launch.sh  pyproject.toml  pytest.ini  requirements.txt  run_app.py  run_app_enhanced.py
.github/workflows/: tests.yml
src/dinesync/: __init__.py  consensus_engine.py  performance_metrics.py  session_manager.py  yelp_ai_client.py  yelp_fusion_client.py
src/yelpreviewgym/: __main__.py  config.py  enhanced_features.py  insights_service.py  performance_metrics.py  schemas.py  streamlit_app.py  user_manager.py  yelp_ai_client.py
tests/: __init__.py  conftest.py  test_enhanced_features.py  test_insights_service.py  test_performance_metrics.py  test_schemas.py  test_user_manager.py  test_yelp_ai_client.py
